@@ -3,6 +3,8 @@ Version: 4.2.7
 Date: ????
   Bugfixes:
     - Fixed a crash with recipes where energy_required is not defined
+    - Fixed certain recipe crafting times being off due to energy_required defaulting to 1
+      instead of 0.5 when not specified in the original recipe
     - Fixed a crash with certain recipes that have no ingredient table
 ---------------------------------------------------------------------------------------------------
 Version: 4.2.6
